--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!/target/*.war
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -12,6 +13,7 @@ target/
 *.iml
 *.ipr
 .idea
+src/main/webapp/WEB-INF/applicationContext.xml
 
 ### Eclipse ###
 .apt_generated
